[package]
name = "lw-generator"
version = "0.1.0"
authors = ["Helium Foundation <info@helium.foundation>"]
edition = "2021"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
clap = {version = "4", features = ["derive"]}
geojson = {version = "0.24", features = ["geo-types"]}
geo-types = "*"
hextree= "0.1"
byteorder = "1.4"
micro-timer = "0"
log = "0"
simple_logger = "4"

[profile.release]
debug = true
